ui: spelling progress bar is fixed, smaller spelling-cards on mobile

--- a/components/ProgressBar/ProgressBar.module.scss
+++ b/components/ProgressBar/ProgressBar.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  width: calc(100% - 2rem);
   .bar {
     width: 100%;
     max-width: 450px;
